--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,10 @@
           <line x1="3" y1="18" x2="21" y2="18"></line>
         </svg>
       </button>
+      <label class="theme-toggle">
+        <input type="checkbox" id="theme-toggle">
+        <span class="toggle-slider"></span>
+      </label>
     </div>
   </header>
 
