--- a/about.html
+++ b/about.html
@@ -69,13 +69,13 @@
               I'm passionate about helping organizations unlock the full potential of their data assets.
             </p>
             <div class="btn-group" style="margin-top: 1.5rem;">
-              <a href="#" class="btn btn-primary">
+              <a href="contact.html" class="btn btn-primary">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 0.5rem;">
                   <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                   <polyline points="7 10 12 15 17 10"></polyline>
                   <line x1="12" y1="15" x2="12" y2="3"></line>
                 </svg>
-                Download CV
+                Request Full CV
               </a>
               <a href="contact.html" class="btn btn-secondary">Get in Touch</a>
             </div>
@@ -106,7 +106,7 @@
       </div>
     </section>
 
-    <section class="section" style="background: var(--bg-secondary);">
+    <section class="section" id="work-experience" style="background: var(--bg-secondary);">
       <div class="container">
         <h2>Work Experience</h2>
         <div class="timeline">
