--- a/contact.html
+++ b/contact.html
@@ -115,18 +115,18 @@
           <div>
             <div class="card" style="height: 100%;">
               <h3 style="margin-bottom: 1.5rem;">Send a Message</h3>
-              <form>
+              <form data-contact-form>
                 <div class="form-group">
-                  <label class="form-label">Name</label>
-                  <input type="text" class="form-input" placeholder="Your name">
+                  <label class="form-label" for="name">Name</label>
+                  <input id="name" name="name" type="text" class="form-input" autocomplete="name" required placeholder="Your name">
                 </div>
                 <div class="form-group">
-                  <label class="form-label">Email</label>
-                  <input type="email" class="form-input" placeholder="your@email.com">
+                  <label class="form-label" for="email">Email</label>
+                  <input id="email" name="email" type="email" class="form-input" autocomplete="email" required placeholder="your@email.com">
                 </div>
                 <div class="form-group">
-                  <label class="form-label">Project Type</label>
-                  <select class="form-select">
+                  <label class="form-label" for="project-type">Project Type</label>
+                  <select id="project-type" name="project-type" class="form-select">
                     <option value="">Select a project type...</option>
                     <option value="data-engineering">Data Engineering</option>
                     <option value="analytics">Analytics & BI</option>
@@ -135,8 +135,8 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label class="form-label">Message</label>
-                  <textarea class="form-textarea" placeholder="Tell me about your project..."></textarea>
+                  <label class="form-label" for="message">Message</label>
+                  <textarea id="message" name="message" class="form-textarea" required placeholder="Tell me about your project..."></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary" style="width: 100%; justify-content: center;">
                   Send Message
