--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Giacomo Leo - Analytics Engineer. Transforming data into actionable insights and building scalable data solutions.">
-  <title>Giacomo Leo | Analytics Engineer</title>
+  <meta name="description" content="Giacomo Leo is a Senior Analytics Engineer helping teams design reliable data platforms, improve trust in metrics, and accelerate business decisions.">
+  <meta property="og:title" content="Giacomo Leo | Senior Analytics Engineer">
+  <meta property="og:description" content="Senior Analytics Engineer focused on modern data stack delivery, analytics engineering, and measurable business impact.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://giacusleo.github.io/website/">
+  <meta name="twitter:card" content="summary_large_image">
+  <title>Giacomo Leo | Senior Analytics Engineer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -39,24 +44,24 @@
     <section class="hero">
       <div class="container hero-content">
         <div>
-          <span class="hero-badge">Analytics Engineer</span>
+          <span class="hero-badge">Senior Analytics Engineer</span>
           <h1 class="hero-title">
-            Transforming Data into<br>
-            <span>Actionable Insights</span>
+            From Data Chaos to<br>
+            <span>Clear, Trusted Decisions</span>
           </h1>
           <p class="hero-description">
-            I help businesses unlock the power of their data through scalable pipelines, 
-            automated reporting, and data-driven decision making.
+            I design analytics platforms that cut noise, standardize metrics, and give teams
+            reliable answers faster.
           </p>
           <div class="btn-group">
             <a href="contact.html" class="btn btn-primary">
-              Get in Touch
+              Book a Discovery Call
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <line x1="5" y1="12" x2="19" y2="12"></line>
                 <polyline points="12 5 19 12 12 19"></polyline>
               </svg>
             </a>
-            <a href="about.html" class="btn btn-secondary">View CV</a>
+            <a href="about.html#work-experience" class="btn btn-secondary">View Experience</a>
           </div>
           <div class="social-links">
             <a href="https://github.com/giacusleo" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
@@ -88,6 +93,29 @@
               </div>
               <p style="color: var(--text-muted); font-size: 0.875rem;">Professional Photo</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="text-center mb-4">
+          <h2>Impact Snapshot</h2>
+          <p>What I focus on delivering in analytics engineering engagements</p>
+        </div>
+        <div class="impact-grid">
+          <div class="impact-card">
+            <div class="impact-value">300%</div>
+            <p class="impact-label">Faster warehouse performance after platform migrations</p>
+          </div>
+          <div class="impact-card">
+            <div class="impact-value">40%</div>
+            <p class="impact-label">Cloud cost reduction through modeling and workload tuning</p>
+          </div>
+          <div class="impact-card">
+            <div class="impact-value">20h/week</div>
+            <p class="impact-label">Analyst time saved via semantic layers and automation</p>
           </div>
         </div>
       </div>
@@ -140,6 +168,29 @@
             <div class="skill-name">AWS</div>
             <div class="skill-category">Cloud</div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="text-center mb-4">
+          <h2>How I Help Teams</h2>
+          <p>High-leverage services for scaling analytics with confidence</p>
+        </div>
+        <div class="services-grid">
+          <article class="service-card">
+            <h3>Modern Data Stack Delivery</h3>
+            <p class="mb-0">End-to-end design and implementation of ingestion, transformation, orchestration, and observability.</p>
+          </article>
+          <article class="service-card">
+            <h3>Analytics Engineering Leadership</h3>
+            <p class="mb-0">dbt architecture, metric governance, code standards, and team workflows that improve reliability.</p>
+          </article>
+          <article class="service-card">
+            <h3>Executive-Ready BI</h3>
+            <p class="mb-0">Decision-focused dashboards and semantic modeling so stakeholders can move faster with trusted numbers.</p>
+          </article>
         </div>
       </div>
     </section>
@@ -246,6 +297,19 @@
     </div>
   </footer>
 
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Giacomo Leo",
+      "jobTitle": "Senior Analytics Engineer",
+      "url": "https://giacusleo.github.io/website/",
+      "sameAs": [
+        "https://github.com/giacusleo",
+        "https://www.linkedin.com/in/giacomoleo/"
+      ]
+    }
+  </script>
   <script src="js/main.js"></script>
 </body>
 </html>
