--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </button>
       <label class="theme-toggle">
         <input type="checkbox" id="theme-toggle">
-        <span class="toggle-slider"></span>
+        <span class="toggle-slider"><span class="theme-toggle-icon" aria-hidden="true">🌙</span></span>
       </label>
     </div>
   </header>
